new h1 tap added

--- a/js/index.html
+++ b/js/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <h1>Welcome to mail branch</h1>
+    <h1>Welcome to Git practice</h1>
+    <h1>This is important code</h1>
 
 </body>
 
